# epiphany_c_shader

./: Cargo.toml  LICENSE  README.md
common/: Cargo.toml
common/src/: lib.rs
images/: Showcase.md
server/: .gitignore  Cargo.toml  build.rs  e_template.c  shader_functions.h
server/c/: lib.c  shared.h
server/src/: epiphany.rs  main.rs
viewer/: Cargo.toml  test.c
viewer/shaders/: chesboard.c  circle.c  gradient.c  julia.c  mandelbrot.c  rectangle.c  sierpinski_polygon.c  trinagle.c
viewer/src/: main.rs
