[package]
name = "server"
version = "0.1.0"
authors = ["vlabo <vladdocan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
num-traits = "0.2"
bincode = "1.2.1"
lazy_static = "1.4.0"

[build-dependencies]
cc = "1.0.50"